// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admonition 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 4,
        },
        "start": {
          "column": 0,
          "line": 4,
        },
      },
      "range": [
        32,
        45,
      ],
      "raw": "// with title",
      "type": "Comment",
      "value": "with title",
    },
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 8,
        },
      },
      "range": [
        74,
        82,
      ],
      "raw": "// block",
      "type": "Comment",
      "value": "block",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 21,
              "line": 2,
            },
            "start": {
              "column": 6,
              "line": 2,
            },
          },
          "range": [
            15,
            30,
          ],
          "raw": "This is a note.",
          "type": "Str",
          "value": "This is a note.",
        },
      ],
      "loc": {
        "end": {
          "column": 21,
          "line": 2,
        },
        "start": {
          "column": 6,
          "line": 2,
        },
      },
      "range": [
        15,
        30,
      ],
      "raw": "This is a note.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 19,
              "line": 6,
            },
            "start": {
              "column": 5,
              "line": 6,
            },
          },
          "range": [
            58,
            72,
          ],
          "raw": "This is a tip.",
          "type": "Str",
          "value": "This is a tip.",
        },
      ],
      "loc": {
        "end": {
          "column": 19,
          "line": 6,
        },
        "start": {
          "column": 5,
          "line": 6,
        },
      },
      "range": [
        58,
        72,
      ],
      "raw": "This is a tip.",
      "title": "title",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 18,
                  "line": 11,
                },
                "start": {
                  "column": 0,
                  "line": 11,
                },
              },
              "range": [
                98,
                116,
              ],
              "raw": "This is a warning.",
              "type": "Str",
              "value": "This is a warning.",
            },
          ],
          "loc": {
            "end": {
              "column": 18,
              "line": 11,
            },
            "start": {
              "column": 0,
              "line": 11,
            },
          },
          "range": [
            98,
            116,
          ],
          "raw": "This is a warning.",
          "type": "Paragraph",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "loc": {
                        "end": {
                          "column": 6,
                          "line": 13,
                        },
                        "start": {
                          "column": 2,
                          "line": 13,
                        },
                      },
                      "range": [
                        120,
                        124,
                      ],
                      "raw": "list",
                      "type": "Str",
                      "value": "list",
                    },
                  ],
                  "loc": {
                    "end": {
                      "column": 6,
                      "line": 13,
                    },
                    "start": {
                      "column": 2,
                      "line": 13,
                    },
                  },
                  "range": [
                    120,
                    124,
                  ],
                  "raw": "list",
                  "type": "Paragraph",
                },
              ],
              "loc": {
                "end": {
                  "column": 6,
                  "line": 13,
                },
                "start": {
                  "column": 2,
                  "line": 13,
                },
              },
              "range": [
                120,
                124,
              ],
              "raw": "",
              "type": "ListItem",
            },
          ],
          "loc": {
            "end": {
              "column": 6,
              "line": 13,
            },
            "start": {
              "column": 2,
              "line": 13,
            },
          },
          "range": [
            120,
            124,
          ],
          "raw": "",
          "type": "List",
        },
      ],
      "loc": {
        "end": {
          "column": 6,
          "line": 13,
        },
        "start": {
          "column": 0,
          "line": 11,
        },
      },
      "range": [
        98,
        124,
      ],
      "raw": "",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 6,
      "line": 13,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    129,
  ],
  "raw": "// basic
NOTE: This is a note.

// with title
.title
TIP: This is a tip.

// block
[WARNING]
====
This is a warning.

* list
====",
  "type": "Document",
}
`;

exports[`example 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        25,
        38,
      ],
      "raw": "// with title",
      "type": "Comment",
      "value": "with title",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 13,
              "line": 6,
            },
            "start": {
              "column": 0,
              "line": 6,
            },
          },
          "range": [
            25,
            38,
          ],
          "raw": "// with title",
          "type": "Comment",
          "value": "with title",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 4,
                  "line": 3,
                },
                "start": {
                  "column": 0,
                  "line": 3,
                },
              },
              "range": [
                14,
                18,
              ],
              "raw": "text",
              "type": "Str",
              "value": "text",
            },
          ],
          "loc": {
            "end": {
              "column": 4,
              "line": 3,
            },
            "start": {
              "column": 0,
              "line": 3,
            },
          },
          "range": [
            14,
            18,
          ],
          "raw": "text",
          "type": "Paragraph",
        },
      ],
      "loc": {
        "end": {
          "column": 4,
          "line": 3,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        25,
        18,
      ],
      "raw": "",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 15,
                  "line": 9,
                },
                "start": {
                  "column": 0,
                  "line": 9,
                },
              },
              "range": [
                51,
                66,
              ],
              "raw": "text with title",
              "type": "Str",
              "value": "text with title",
            },
          ],
          "loc": {
            "end": {
              "column": 15,
              "line": 9,
            },
            "start": {
              "column": 0,
              "line": 9,
            },
          },
          "range": [
            51,
            66,
          ],
          "raw": "text with title",
          "type": "Paragraph",
        },
      ],
      "loc": {
        "end": {
          "column": 15,
          "line": 9,
        },
        "start": {
          "column": 0,
          "line": 9,
        },
      },
      "range": [
        51,
        66,
      ],
      "raw": "",
      "title": "title",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 15,
      "line": 9,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    71,
  ],
  "raw": "// basic
====
text
====

// with title
.title
====
text with title
====",
  "type": "Document",
}
`;

exports[`inline quoted 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 11,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        11,
      ],
      "raw": "// emphasis",
      "type": "Comment",
      "value": "emphasis",
    },
    {
      "loc": {
        "end": {
          "column": 19,
          "line": 4,
        },
        "start": {
          "column": 0,
          "line": 4,
        },
      },
      "range": [
        44,
        63,
      ],
      "raw": "// partial emphasis",
      "type": "Comment",
      "value": "partial emphasis",
    },
    {
      "loc": {
        "end": {
          "column": 9,
          "line": 7,
        },
        "start": {
          "column": 0,
          "line": 7,
        },
      },
      "range": [
        105,
        114,
      ],
      "raw": "// strong",
      "type": "Comment",
      "value": "strong",
    },
    {
      "loc": {
        "end": {
          "column": 17,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "range": [
        144,
        161,
      ],
      "raw": "// partial strong",
      "type": "Comment",
      "value": "partial strong",
    },
    {
      "loc": {
        "end": {
          "column": 12,
          "line": 13,
        },
        "start": {
          "column": 0,
          "line": 13,
        },
      },
      "range": [
        201,
        213,
      ],
      "raw": "// monospace",
      "type": "Comment",
      "value": "monospace",
    },
    {
      "loc": {
        "end": {
          "column": 20,
          "line": 16,
        },
        "start": {
          "column": 0,
          "line": 16,
        },
      },
      "range": [
        246,
        266,
      ],
      "raw": "// partial monospace",
      "type": "Comment",
      "value": "partial monospace",
    },
    {
      "loc": {
        "end": {
          "column": 7,
          "line": 19,
        },
        "start": {
          "column": 0,
          "line": 19,
        },
      },
      "range": [
        309,
        316,
      ],
      "raw": "// mark",
      "type": "Comment",
      "value": "mark",
    },
    {
      "loc": {
        "end": {
          "column": 17,
          "line": 22,
        },
        "start": {
          "column": 0,
          "line": 22,
        },
      },
      "range": [
        344,
        361,
      ],
      "raw": "// mark with role",
      "type": "Comment",
      "value": "mark with role",
    },
    {
      "loc": {
        "end": {
          "column": 15,
          "line": 25,
        },
        "start": {
          "column": 0,
          "line": 25,
        },
      },
      "range": [
        403,
        418,
      ],
      "raw": "// .superscript",
      "type": "Comment",
      "value": ".superscript",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 28,
        },
        "start": {
          "column": 0,
          "line": 28,
        },
      },
      "range": [
        453,
        466,
      ],
      "raw": "// .subscript",
      "type": "Comment",
      "value": ".subscript",
    },
    {
      "loc": {
        "end": {
          "column": 15,
          "line": 31,
        },
        "start": {
          "column": 0,
          "line": 31,
        },
      },
      "range": [
        499,
        514,
      ],
      "raw": "// double quote",
      "type": "Comment",
      "value": "double quote",
    },
    {
      "loc": {
        "end": {
          "column": 15,
          "line": 34,
        },
        "start": {
          "column": 0,
          "line": 34,
        },
      },
      "range": [
        553,
        568,
      ],
      "raw": "// single quote",
      "type": "Comment",
      "value": "single quote",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 37,
        },
        "start": {
          "column": 0,
          "line": 37,
        },
      },
      "range": [
        607,
        620,
      ],
      "raw": "// apostrophe",
      "type": "Comment",
      "value": "apostrophe",
    },
    {
      "loc": {
        "end": {
          "column": 30,
          "line": 40,
        },
        "start": {
          "column": 0,
          "line": 40,
        },
      },
      "range": [
        656,
        686,
      ],
      "raw": "// mixed monospace bold italic",
      "type": "Comment",
      "value": "mixed monospace bold italic",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 30,
              "line": 2,
            },
            "start": {
              "column": 0,
              "line": 2,
            },
          },
          "range": [
            12,
            42,
          ],
          "raw": "This is an _emphasis_ example.",
          "type": "Str",
          "value": "This is an emphasis example.",
        },
      ],
      "loc": {
        "end": {
          "column": 30,
          "line": 2,
        },
        "start": {
          "column": 0,
          "line": 2,
        },
      },
      "range": [
        12,
        42,
      ],
      "raw": "This is an _emphasis_ example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 39,
              "line": 5,
            },
            "start": {
              "column": 0,
              "line": 5,
            },
          },
          "range": [
            64,
            103,
          ],
          "raw": "This is a __part__ial emphasis example.",
          "type": "Str",
          "value": "This is a partial emphasis example.",
        },
      ],
      "loc": {
        "end": {
          "column": 39,
          "line": 5,
        },
        "start": {
          "column": 0,
          "line": 5,
        },
      },
      "range": [
        64,
        103,
      ],
      "raw": "This is a __part__ial emphasis example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 27,
              "line": 8,
            },
            "start": {
              "column": 0,
              "line": 8,
            },
          },
          "range": [
            115,
            142,
          ],
          "raw": "This is a *strong* example.",
          "type": "Str",
          "value": "This is a strong example.",
        },
      ],
      "loc": {
        "end": {
          "column": 27,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 8,
        },
      },
      "range": [
        115,
        142,
      ],
      "raw": "This is a *strong* example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 37,
              "line": 11,
            },
            "start": {
              "column": 0,
              "line": 11,
            },
          },
          "range": [
            162,
            199,
          ],
          "raw": "This is a **part**ial strong example.",
          "type": "Str",
          "value": "This is a partial strong example.",
        },
      ],
      "loc": {
        "end": {
          "column": 37,
          "line": 11,
        },
        "start": {
          "column": 0,
          "line": 11,
        },
      },
      "range": [
        162,
        199,
      ],
      "raw": "This is a **part**ial strong example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 30,
              "line": 14,
            },
            "start": {
              "column": 0,
              "line": 14,
            },
          },
          "range": [
            214,
            244,
          ],
          "raw": "This is a \`monospace\` example.",
          "type": "Str",
          "value": "This is a monospace example.",
        },
      ],
      "loc": {
        "end": {
          "column": 30,
          "line": 14,
        },
        "start": {
          "column": 0,
          "line": 14,
        },
      },
      "range": [
        214,
        244,
      ],
      "raw": "This is a \`monospace\` example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 40,
              "line": 17,
            },
            "start": {
              "column": 0,
              "line": 17,
            },
          },
          "range": [
            267,
            307,
          ],
          "raw": "This is a \`\`part\`\`ial monospace example.",
          "type": "Str",
          "value": "This is a partial monospace example.",
        },
      ],
      "loc": {
        "end": {
          "column": 40,
          "line": 17,
        },
        "start": {
          "column": 0,
          "line": 17,
        },
      },
      "range": [
        267,
        307,
      ],
      "raw": "This is a \`\`part\`\`ial monospace example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 25,
              "line": 20,
            },
            "start": {
              "column": 0,
              "line": 20,
            },
          },
          "range": [
            317,
            342,
          ],
          "raw": "This is a #mark# example.",
          "type": "Str",
          "value": "This is a mark example.",
        },
      ],
      "loc": {
        "end": {
          "column": 25,
          "line": 20,
        },
        "start": {
          "column": 0,
          "line": 20,
        },
      },
      "range": [
        317,
        342,
      ],
      "raw": "This is a #mark# example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 39,
              "line": 23,
            },
            "start": {
              "column": 0,
              "line": 23,
            },
          },
          "range": [
            362,
            401,
          ],
          "raw": "This is a [.small]#small mark# example.",
          "type": "Str",
          "value": "This is a small mark example.",
        },
      ],
      "loc": {
        "end": {
          "column": 39,
          "line": 23,
        },
        "start": {
          "column": 0,
          "line": 23,
        },
      },
      "range": [
        362,
        401,
      ],
      "raw": "This is a [.small]#small mark# example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 32,
              "line": 26,
            },
            "start": {
              "column": 0,
              "line": 26,
            },
          },
          "range": [
            419,
            451,
          ],
          "raw": "This is a ^super^script example.",
          "type": "Str",
          "value": "This is a superscript example.",
        },
      ],
      "loc": {
        "end": {
          "column": 32,
          "line": 26,
        },
        "start": {
          "column": 0,
          "line": 26,
        },
      },
      "range": [
        419,
        451,
      ],
      "raw": "This is a ^super^script example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 30,
              "line": 29,
            },
            "start": {
              "column": 0,
              "line": 29,
            },
          },
          "range": [
            467,
            497,
          ],
          "raw": "This is a ~sub~script example.",
          "type": "Str",
          "value": "This is a subscript example.",
        },
      ],
      "loc": {
        "end": {
          "column": 30,
          "line": 29,
        },
        "start": {
          "column": 0,
          "line": 29,
        },
      },
      "range": [
        467,
        497,
      ],
      "raw": "This is a ~sub~script example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 36,
              "line": 32,
            },
            "start": {
              "column": 0,
              "line": 32,
            },
          },
          "range": [
            515,
            551,
          ],
          "raw": "This is a "\`double quotes\`" example.",
          "type": "Str",
          "value": "This is a “double quotes” example.",
        },
      ],
      "loc": {
        "end": {
          "column": 36,
          "line": 32,
        },
        "start": {
          "column": 0,
          "line": 32,
        },
      },
      "range": [
        515,
        551,
      ],
      "raw": "This is a "\`double quotes\`" example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 36,
              "line": 35,
            },
            "start": {
              "column": 0,
              "line": 35,
            },
          },
          "range": [
            569,
            605,
          ],
          "raw": "This is a '\`single quotes\`' example.",
          "type": "Str",
          "value": "This is a ‘single quotes’ example.",
        },
      ],
      "loc": {
        "end": {
          "column": 36,
          "line": 35,
        },
        "start": {
          "column": 0,
          "line": 35,
        },
      },
      "range": [
        569,
        605,
      ],
      "raw": "This is a '\`single quotes\`' example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 33,
              "line": 38,
            },
            "start": {
              "column": 0,
              "line": 38,
            },
          },
          "range": [
            621,
            654,
          ],
          "raw": "This is an apostrophe\`'s example.",
          "type": "Str",
          "value": "This is an apostrophe’s example.",
        },
      ],
      "loc": {
        "end": {
          "column": 33,
          "line": 38,
        },
        "start": {
          "column": 0,
          "line": 38,
        },
      },
      "range": [
        621,
        654,
      ],
      "raw": "This is an apostrophe\`'s example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 58,
              "line": 41,
            },
            "start": {
              "column": 0,
              "line": 41,
            },
          },
          "range": [
            687,
            745,
          ],
          "raw": "\`*_monospace bold italic phrase_*\` and le\`\`**__tt__**\`\`ers",
          "type": "Str",
          "value": "monospace bold italic phrase and letters",
        },
      ],
      "loc": {
        "end": {
          "column": 58,
          "line": 41,
        },
        "start": {
          "column": 0,
          "line": 41,
        },
      },
      "range": [
        687,
        745,
      ],
      "raw": "\`*_monospace bold italic phrase_*\` and le\`\`**__tt__**\`\`ers",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 58,
      "line": 41,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    745,
  ],
  "raw": "// emphasis
This is an _emphasis_ example.

// partial emphasis
This is a __part__ial emphasis example.

// strong
This is a *strong* example.

// partial strong
This is a **part**ial strong example.

// monospace
This is a \`monospace\` example.

// partial monospace
This is a \`\`part\`\`ial monospace example.

// mark
This is a #mark# example.

// mark with role
This is a [.small]#small mark# example.

// .superscript
This is a ^super^script example.

// .subscript
This is a ~sub~script example.

// double quote
This is a "\`double quotes\`" example.

// single quote
This is a '\`single quotes\`' example.

// apostrophe
This is an apostrophe\`'s example.

// mixed monospace bold italic
\`*_monospace bold italic phrase_*\` and le\`\`**__tt__**\`\`ers",
  "type": "Document",
}
`;

exports[`listing 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        47,
        60,
      ],
      "raw": "// with title",
      "type": "Comment",
      "value": "with title",
    },
    {
      "loc": {
        "end": {
          "column": 9,
          "line": 12,
        },
        "start": {
          "column": 0,
          "line": 12,
        },
      },
      "range": [
        117,
        126,
      ],
      "raw": "// source",
      "type": "Comment",
      "value": "source",
    },
    {
      "loc": {
        "end": {
          "column": 22,
          "line": 18,
        },
        "start": {
          "column": 0,
          "line": 18,
        },
      },
      "range": [
        172,
        194,
      ],
      "raw": "// source with comment",
      "type": "Comment",
      "value": "source with comment",
    },
    {
      "loc": {
        "end": {
          "column": 10,
          "line": 21,
        },
        "start": {
          "column": 0,
          "line": 21,
        },
      },
      "range": [
        212,
        222,
      ],
      "raw": "// comment",
      "type": "Comment",
      "value": "comment",
    },
    {
      "loc": {
        "end": {
          "column": 26,
          "line": 3,
        },
        "start": {
          "column": 0,
          "line": 3,
        },
      },
      "range": [
        14,
        40,
      ],
      "raw": "echo "This is an example."",
      "type": "CodeBlock",
      "value": "echo "This is an example."",
    },
    {
      "loc": {
        "end": {
          "column": 37,
          "line": 9,
        },
        "start": {
          "column": 0,
          "line": 9,
        },
      },
      "range": [
        73,
        110,
      ],
      "raw": "echo "This is an example with title."",
      "title": "title",
      "type": "CodeBlock",
      "value": "echo "This is an example with title."",
    },
    {
      "lang": "ruby",
      "loc": {
        "end": {
          "column": 19,
          "line": 15,
        },
        "start": {
          "column": 0,
          "line": 15,
        },
      },
      "range": [
        146,
        165,
      ],
      "raw": "puts 'Hello world!'",
      "type": "CodeBlock",
      "value": "puts 'Hello world!'",
    },
    {
      "lang": "js",
      "loc": {
        "end": {
          "column": 27,
          "line": 22,
        },
        "start": {
          "column": 0,
          "line": 21,
        },
      },
      "range": [
        212,
        250,
      ],
      "raw": "// comment
console.log("Hello world!")",
      "type": "CodeBlock",
      "value": "// comment
console.log("Hello world!")",
    },
  ],
  "loc": {
    "end": {
      "column": 27,
      "line": 22,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    255,
  ],
  "raw": "// basic
----
echo "This is an example."
----

// with title
.title
----
echo "This is an example with title."
----

// source
[source,ruby]
----
puts 'Hello world!'
----

// source with comment
[source,js]
----
// comment
console.log("Hello world!")
----",
  "type": "Document",
}
`;

exports[`literal 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        40,
        53,
      ],
      "raw": "// with title",
      "type": "Comment",
      "value": "with title",
    },
    {
      "loc": {
        "end": {
          "column": 15,
          "line": 12,
        },
        "start": {
          "column": 0,
          "line": 12,
        },
      },
      "range": [
        103,
        118,
      ],
      "raw": "// style syntax",
      "type": "Comment",
      "value": "style syntax",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 19,
              "line": 3,
            },
            "start": {
              "column": 0,
              "line": 3,
            },
          },
          "range": [
            14,
            33,
          ],
          "raw": "This is an example.",
          "type": "Str",
          "value": "This is an example.",
        },
      ],
      "loc": {
        "end": {
          "column": 19,
          "line": 3,
        },
        "start": {
          "column": 0,
          "line": 3,
        },
      },
      "range": [
        14,
        33,
      ],
      "raw": "This is an example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 30,
              "line": 9,
            },
            "start": {
              "column": 0,
              "line": 9,
            },
          },
          "range": [
            66,
            96,
          ],
          "raw": "This is an example with title.",
          "type": "Str",
          "value": "This is an example with title.",
        },
      ],
      "loc": {
        "end": {
          "column": 30,
          "line": 9,
        },
        "start": {
          "column": 0,
          "line": 9,
        },
      },
      "range": [
        66,
        96,
      ],
      "raw": "This is an example with title.",
      "title": "title",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 32,
              "line": 16,
            },
            "start": {
              "column": 0,
              "line": 14,
            },
          },
          "range": [
            129,
            251,
          ],
          "raw": "error: 1954 Forbidden search
absolutely fatal: operation lost in the dodecahedron of doom
Would you like to try again? y/n",
          "type": "Str",
          "value": "error: 1954 Forbidden search
absolutely fatal: operation lost in the dodecahedron of doom
Would you like to try again? y/n",
        },
      ],
      "loc": {
        "end": {
          "column": 32,
          "line": 16,
        },
        "start": {
          "column": 0,
          "line": 14,
        },
      },
      "range": [
        129,
        251,
      ],
      "raw": "error: 1954 Forbidden search
absolutely fatal: operation lost in the dodecahedron of doom
Would you like to try again? y/n",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 32,
      "line": 16,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    251,
  ],
  "raw": "// basic
....
This is an example.
....

// with title
.title
....
This is an example with title.
....

// style syntax
[literal]
error: 1954 Forbidden search
absolutely fatal: operation lost in the dodecahedron of doom
Would you like to try again? y/n",
  "type": "Document",
}
`;

exports[`open 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        36,
        49,
      ],
      "raw": "// with title",
      "type": "Comment",
      "value": "with title",
    },
    {
      "loc": {
        "end": {
          "column": 11,
          "line": 12,
        },
        "start": {
          "column": 0,
          "line": 12,
        },
      },
      "range": [
        95,
        106,
      ],
      "raw": "// abstract",
      "type": "Comment",
      "value": "abstract",
    },
    {
      "loc": {
        "end": {
          "column": 9,
          "line": 18,
        },
        "start": {
          "column": 0,
          "line": 18,
        },
      },
      "range": [
        166,
        175,
      ],
      "raw": "// source",
      "type": "Comment",
      "value": "source",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 13,
              "line": 6,
            },
            "start": {
              "column": 0,
              "line": 6,
            },
          },
          "range": [
            36,
            49,
          ],
          "raw": "// with title",
          "type": "Comment",
          "value": "with title",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 19,
                  "line": 3,
                },
                "start": {
                  "column": 0,
                  "line": 3,
                },
              },
              "range": [
                12,
                31,
              ],
              "raw": "This is an example.",
              "type": "Str",
              "value": "This is an example.",
            },
          ],
          "loc": {
            "end": {
              "column": 19,
              "line": 3,
            },
            "start": {
              "column": 0,
              "line": 3,
            },
          },
          "range": [
            12,
            31,
          ],
          "raw": "This is an example.",
          "type": "Paragraph",
        },
      ],
      "loc": {
        "end": {
          "column": 19,
          "line": 3,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        36,
        31,
      ],
      "raw": "",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 11,
              "line": 12,
            },
            "start": {
              "column": 0,
              "line": 12,
            },
          },
          "range": [
            95,
            106,
          ],
          "raw": "// abstract",
          "type": "Comment",
          "value": "abstract",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 30,
                  "line": 9,
                },
                "start": {
                  "column": 0,
                  "line": 9,
                },
              },
              "range": [
                60,
                90,
              ],
              "raw": "This is an example with title.",
              "type": "Str",
              "value": "This is an example with title.",
            },
          ],
          "loc": {
            "end": {
              "column": 30,
              "line": 9,
            },
            "start": {
              "column": 0,
              "line": 9,
            },
          },
          "range": [
            60,
            90,
          ],
          "raw": "This is an example with title.",
          "type": "Paragraph",
        },
      ],
      "loc": {
        "end": {
          "column": 30,
          "line": 9,
        },
        "start": {
          "column": 0,
          "line": 12,
        },
      },
      "range": [
        95,
        90,
      ],
      "raw": "",
      "title": "title",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 9,
              "line": 18,
            },
            "start": {
              "column": 0,
              "line": 18,
            },
          },
          "range": [
            166,
            175,
          ],
          "raw": "// source",
          "type": "Comment",
          "value": "source",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 40,
                  "line": 15,
                },
                "start": {
                  "column": 0,
                  "line": 15,
                },
              },
              "range": [
                121,
                161,
              ],
              "raw": "This is an abstract quote block example.",
              "type": "Str",
              "value": "This is an abstract quote block example.",
            },
          ],
          "loc": {
            "end": {
              "column": 40,
              "line": 15,
            },
            "start": {
              "column": 0,
              "line": 15,
            },
          },
          "range": [
            121,
            161,
          ],
          "raw": "This is an abstract quote block example.",
          "type": "Paragraph",
        },
      ],
      "loc": {
        "end": {
          "column": 40,
          "line": 15,
        },
        "start": {
          "column": 0,
          "line": 18,
        },
      },
      "range": [
        166,
        161,
      ],
      "raw": "",
      "type": "Paragraph",
    },
    {
      "loc": {
        "end": {
          "column": 23,
          "line": 21,
        },
        "start": {
          "column": 0,
          "line": 21,
        },
      },
      "range": [
        188,
        211,
      ],
      "raw": "printf("Hello world!");",
      "type": "CodeBlock",
      "value": "printf("Hello world!");",
    },
  ],
  "loc": {
    "end": {
      "column": 23,
      "line": 21,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    214,
  ],
  "raw": "// basic
--
This is an example.
--

// with title
.title
--
This is an example with title.
--

// abstract
[abstract]
--
This is an abstract quote block example.
--

// source
[source]
--
printf("Hello world!");
--",
  "type": "Document",
}
`;

exports[`paragraph 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 17,
          "line": 2,
        },
        "start": {
          "column": 0,
          "line": 2,
        },
      },
      "range": [
        2,
        19,
      ],
      "raw": "// inline comment",
      "type": "Comment",
      "value": "inline comment",
    },
    {
      "loc": {
        "end": {
          "column": 20,
          "line": 5,
        },
        "start": {
          "column": 0,
          "line": 5,
        },
      },
      "range": [
        23,
        43,
      ],
      "raw": "// paragraph comment",
      "type": "Comment",
      "value": "paragraph comment",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 8,
        },
      },
      "range": [
        47,
        60,
      ],
      "raw": "// with title",
      "type": "Comment",
      "value": "with title",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 1,
              "line": 6,
            },
            "start": {
              "column": 0,
              "line": 6,
            },
          },
          "range": [
            44,
            45,
          ],
          "raw": "C",
          "type": "Str",
          "value": "C",
        },
      ],
      "loc": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        44,
        45,
      ],
      "raw": "C",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 1,
              "line": 10,
            },
            "start": {
              "column": 0,
              "line": 10,
            },
          },
          "range": [
            68,
            69,
          ],
          "raw": "D",
          "type": "Str",
          "value": "D",
        },
      ],
      "loc": {
        "end": {
          "column": 1,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "range": [
        68,
        69,
      ],
      "raw": "D",
      "title": "title",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 1,
      "line": 10,
    },
    "start": {
      "column": 0,
      "line": 2,
    },
  },
  "range": [
    0,
    69,
  ],
  "raw": "A
// inline comment
B

// paragraph comment
C

// with title
.title
D",
  "type": "Document",
}
`;

exports[`passthrough 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 15,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        47,
        62,
      ],
      "raw": "// style syntax",
      "type": "Comment",
      "value": "style syntax",
    },
    {
      "loc": {
        "end": {
          "column": 9,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "range": [
        110,
        119,
      ],
      "raw": "// inline",
      "type": "Comment",
      "value": "inline",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 26,
              "line": 3,
            },
            "start": {
              "column": 0,
              "line": 3,
            },
          },
          "range": [
            14,
            40,
          ],
          "raw": "<p>This is an example.</p>",
          "type": "Str",
          "value": "This is an example.",
        },
      ],
      "loc": {
        "end": {
          "column": 26,
          "line": 3,
        },
        "start": {
          "column": 0,
          "line": 3,
        },
      },
      "range": [
        14,
        40,
      ],
      "raw": "<p>This is an example.</p>",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 38,
              "line": 8,
            },
            "start": {
              "column": 0,
              "line": 8,
            },
          },
          "range": [
            70,
            108,
          ],
          "raw": "<p>This is a style syntax example.</p>",
          "type": "Str",
          "value": "This is a style syntax example.",
        },
      ],
      "loc": {
        "end": {
          "column": 38,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 8,
        },
      },
      "range": [
        70,
        108,
      ],
      "raw": "<p>This is a style syntax example.</p>",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 40,
              "line": 11,
            },
            "start": {
              "column": 0,
              "line": 11,
            },
          },
          "range": [
            120,
            160,
          ],
          "raw": "pass:[<p>This is an inline example.</p>]",
          "type": "Str",
          "value": "This is an inline example.",
        },
      ],
      "loc": {
        "end": {
          "column": 40,
          "line": 11,
        },
        "start": {
          "column": 0,
          "line": 11,
        },
      },
      "range": [
        120,
        160,
      ],
      "raw": "pass:[<p>This is an inline example.</p>]",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 40,
      "line": 11,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    160,
  ],
  "raw": "// basic
++++
<p>This is an example.</p>
++++

// style syntax
[pass]
<p>This is a style syntax example.</p>

// inline
pass:[<p>This is an inline example.</p>]",
  "type": "Document",
}
`;

exports[`quote 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 12,
          "line": 11,
        },
        "start": {
          "column": 0,
          "line": 11,
        },
      },
      "range": [
        336,
        348,
      ],
      "raw": "// paragraph",
      "type": "Comment",
      "value": "paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 12,
              "line": 11,
            },
            "start": {
              "column": 0,
              "line": 11,
            },
          },
          "range": [
            336,
            348,
          ],
          "raw": "// paragraph",
          "type": "Comment",
          "value": "paragraph",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 90,
                  "line": 4,
                },
                "start": {
                  "column": 0,
                  "line": 4,
                },
              },
              "range": [
                55,
                145,
              ],
              "raw": "Dennis: Come and see the violence inherent in the system. Help! Help! I'm being repressed!",
              "type": "Str",
              "value": "Dennis: Come and see the violence inherent in the system. Help! Help! I’m being repressed!",
            },
          ],
          "loc": {
            "end": {
              "column": 90,
              "line": 4,
            },
            "start": {
              "column": 0,
              "line": 4,
            },
          },
          "range": [
            55,
            145,
          ],
          "raw": "Dennis: Come and see the violence inherent in the system. Help! Help! I'm being repressed!",
          "type": "Paragraph",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 28,
                  "line": 6,
                },
                "start": {
                  "column": 0,
                  "line": 6,
                },
              },
              "range": [
                147,
                175,
              ],
              "raw": "King Arthur: Bloody peasant!",
              "type": "Str",
              "value": "King Arthur: Bloody peasant!",
            },
          ],
          "loc": {
            "end": {
              "column": 28,
              "line": 6,
            },
            "start": {
              "column": 0,
              "line": 6,
            },
          },
          "range": [
            147,
            175,
          ],
          "raw": "King Arthur: Bloody peasant!",
          "type": "Paragraph",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 152,
                  "line": 8,
                },
                "start": {
                  "column": 0,
                  "line": 8,
                },
              },
              "range": [
                177,
                329,
              ],
              "raw": "Dennis: Oh, what a giveaway! Did you hear that? Did you hear that, eh? That's what I'm on about! Did you see him repressing me? You saw him, Didn't you?",
              "type": "Str",
              "value": "Dennis: Oh, what a giveaway! Did you hear that? Did you hear that, eh? That’s what I’m on about! Did you see him repressing me? You saw him, Didn’t you?",
            },
          ],
          "loc": {
            "end": {
              "column": 152,
              "line": 8,
            },
            "start": {
              "column": 0,
              "line": 8,
            },
          },
          "range": [
            177,
            329,
          ],
          "raw": "Dennis: Oh, what a giveaway! Did you hear that? Did you hear that, eh? That's what I'm on about! Did you see him repressing me? You saw him, Didn't you?",
          "type": "Paragraph",
        },
      ],
      "loc": {
        "end": {
          "column": 152,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 11,
        },
      },
      "range": [
        336,
        329,
      ],
      "raw": "",
      "type": "BlockQuote",
    },
    {
      "children": [
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 66,
                  "line": 13,
                },
                "start": {
                  "column": 1,
                  "line": 12,
                },
              },
              "range": [
                350,
                480,
              ],
              "raw": "I hold it that a little rebellion now and then is a good thing,
and as necessary in the political world as storms in the physical.",
              "type": "Str",
              "value": "I hold it that a little rebellion now and then is a good thing, and as necessary in the political world as storms in the physical.",
            },
          ],
          "loc": {
            "end": {
              "column": 66,
              "line": 13,
            },
            "start": {
              "column": 1,
              "line": 12,
            },
          },
          "range": [
            350,
            480,
          ],
          "raw": "I hold it that a little rebellion now and then is a good thing,
and as necessary in the political world as storms in the physical.",
          "type": "Paragraph",
        },
      ],
      "loc": {
        "end": {
          "column": 66,
          "line": 13,
        },
        "start": {
          "column": 1,
          "line": 12,
        },
      },
      "range": [
        350,
        480,
      ],
      "raw": "I hold it that a little rebellion now and then is a good thing,
and as necessary in the political world as storms in the physical.",
      "type": "BlockQuote",
    },
  ],
  "loc": {
    "end": {
      "column": 66,
      "line": 13,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    540,
  ],
  "raw": "// basic
[quote, Monty Python and the Holy Grail]
____
Dennis: Come and see the violence inherent in the system. Help! Help! I'm being repressed!

King Arthur: Bloody peasant!

Dennis: Oh, what a giveaway! Did you hear that? Did you hear that, eh? That's what I'm on about! Did you see him repressing me? You saw him, Didn't you?
____

// paragraph
"I hold it that a little rebellion now and then is a good thing,
and as necessary in the political world as storms in the physical."
-- Thomas Jefferson, Papers of Thomas Jefferson: Volume 11",
  "type": "Document",
}
`;

exports[`section 1`] = `
{
  "children": [
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 7,
              "line": 2,
            },
            "start": {
              "column": 2,
              "line": 2,
            },
          },
          "range": [
            11,
            16,
          ],
          "raw": "Title",
          "type": "Str",
          "value": "Title",
        },
      ],
      "depth": 1,
      "loc": {
        "end": {
          "column": 7,
          "line": 2,
        },
        "start": {
          "column": 2,
          "line": 2,
        },
      },
      "range": [
        11,
        16,
      ],
      "raw": "Title",
      "type": "Header",
    },
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 17,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "range": [
        82,
        99,
      ],
      "raw": "// floating title",
      "type": "Comment",
      "value": "floating title",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 18,
              "line": 4,
            },
            "start": {
              "column": 3,
              "line": 4,
            },
          },
          "range": [
            21,
            36,
          ],
          "raw": "Level 1 Section",
          "type": "Str",
          "value": "Level 1 Section",
        },
      ],
      "depth": 2,
      "loc": {
        "end": {
          "column": 18,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 4,
        },
      },
      "range": [
        21,
        36,
      ],
      "raw": "Level 1 Section",
      "type": "Header",
    },
    {
      "loc": {
        "end": {
          "column": 17,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "range": [
        82,
        99,
      ],
      "raw": "// floating title",
      "type": "Comment",
      "value": "floating title",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 13,
              "line": 6,
            },
            "start": {
              "column": 0,
              "line": 6,
            },
          },
          "range": [
            38,
            51,
          ],
          "raw": "Hello, world!",
          "type": "Str",
          "value": "Hello, world!",
        },
      ],
      "loc": {
        "end": {
          "column": 13,
          "line": 6,
        },
        "start": {
          "column": 0,
          "line": 6,
        },
      },
      "range": [
        38,
        51,
      ],
      "raw": "Hello, world!",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 27,
              "line": 8,
            },
            "start": {
              "column": 4,
              "line": 8,
            },
          },
          "range": [
            57,
            80,
          ],
          "raw": "Level 2 Section's title",
          "type": "Str",
          "value": "Level 2 Section’s title",
        },
      ],
      "depth": 3,
      "loc": {
        "end": {
          "column": 27,
          "line": 8,
        },
        "start": {
          "column": 4,
          "line": 8,
        },
      },
      "range": [
        57,
        80,
      ],
      "raw": "Level 2 Section's title",
      "type": "Header",
    },
    {
      "loc": {
        "end": {
          "column": 17,
          "line": 10,
        },
        "start": {
          "column": 0,
          "line": 10,
        },
      },
      "range": [
        82,
        99,
      ],
      "raw": "// floating title",
      "type": "Comment",
      "value": "floating title",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 19,
              "line": 12,
            },
            "start": {
              "column": 3,
              "line": 12,
            },
          },
          "range": [
            114,
            130,
          ],
          "raw": "Discrete Heading",
          "type": "Str",
          "value": "Discrete Heading",
        },
      ],
      "depth": 2,
      "loc": {
        "end": {
          "column": 19,
          "line": 12,
        },
        "start": {
          "column": 3,
          "line": 12,
        },
      },
      "range": [
        114,
        130,
      ],
      "raw": "Discrete Heading",
      "type": "Header",
    },
  ],
  "loc": {
    "end": {
      "column": 19,
      "line": 12,
    },
    "start": {
      "column": 2,
      "line": 2,
    },
  },
  "range": [
    0,
    130,
  ],
  "raw": "// basic
= Title

== Level 1 Section

Hello, world!

=== Level 2 Section's title

// floating title
[discrete]
== Discrete Heading",
  "type": "Document",
}
`;

exports[`sidebar 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 15,
          "line": 16,
        },
        "start": {
          "column": 0,
          "line": 16,
        },
      },
      "range": [
        298,
        313,
      ],
      "raw": "// style syntax",
      "type": "Comment",
      "value": "style syntax",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 15,
              "line": 16,
            },
            "start": {
              "column": 0,
              "line": 16,
            },
          },
          "range": [
            298,
            313,
          ],
          "raw": "// style syntax",
          "type": "Comment",
          "value": "style syntax",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 30,
                  "line": 5,
                },
                "start": {
                  "column": 0,
                  "line": 4,
                },
              },
              "range": [
                21,
                116,
              ],
              "raw": "Sidebars are used to visually separate auxiliary bits of content
that supplement the main text.",
              "type": "Str",
              "value": "Sidebars are used to visually separate auxiliary bits of content that supplement the main text.",
            },
          ],
          "loc": {
            "end": {
              "column": 30,
              "line": 5,
            },
            "start": {
              "column": 0,
              "line": 4,
            },
          },
          "range": [
            21,
            116,
          ],
          "raw": "Sidebars are used to visually separate auxiliary bits of content
that supplement the main text.",
          "type": "Paragraph",
        },
        {
          "children": [
            {
              "loc": {
                "end": {
                  "column": 42,
                  "line": 7,
                },
                "start": {
                  "column": 5,
                  "line": 7,
                },
              },
              "range": [
                123,
                160,
              ],
              "raw": "They can contain any type of content.",
              "type": "Str",
              "value": "They can contain any type of content.",
            },
          ],
          "loc": {
            "end": {
              "column": 42,
              "line": 7,
            },
            "start": {
              "column": 5,
              "line": 7,
            },
          },
          "range": [
            123,
            160,
          ],
          "raw": "They can contain any type of content.",
          "type": "Paragraph",
        },
        {
          "lang": "js",
          "loc": {
            "end": {
              "column": 75,
              "line": 12,
            },
            "start": {
              "column": 0,
              "line": 12,
            },
          },
          "range": [
            211,
            286,
          ],
          "raw": "const { expect, expectCalledWith, heredoc } = require('../test/test-utils')",
          "title": "Source code block in a sidebar",
          "type": "CodeBlock",
          "value": "const { expect, expectCalledWith, heredoc } = require('../test/test-utils')",
        },
      ],
      "loc": {
        "end": {
          "column": 75,
          "line": 12,
        },
        "start": {
          "column": 0,
          "line": 16,
        },
      },
      "range": [
        298,
        286,
      ],
      "raw": "",
      "title": "title",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 30,
              "line": 19,
            },
            "start": {
              "column": 0,
              "line": 18,
            },
          },
          "range": [
            324,
            419,
          ],
          "raw": "Sidebars are used to visually separate auxiliary bits of content
that supplement the main text.",
          "type": "Str",
          "value": "Sidebars are used to visually separate auxiliary bits of content that supplement the main text.",
        },
      ],
      "loc": {
        "end": {
          "column": 30,
          "line": 19,
        },
        "start": {
          "column": 0,
          "line": 18,
        },
      },
      "range": [
        324,
        419,
      ],
      "raw": "Sidebars are used to visually separate auxiliary bits of content
that supplement the main text.",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 30,
      "line": 19,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    419,
  ],
  "raw": "// basic
.title
****
Sidebars are used to visually separate auxiliary bits of content
that supplement the main text.

TIP: They can contain any type of content.

.Source code block in a sidebar
[source,js]
----
const { expect, expectCalledWith, heredoc } = require('../test/test-utils')
----
****

// style syntax
[sidebar]
Sidebars are used to visually separate auxiliary bits of content
that supplement the main text.",
  "type": "Document",
}
`;

exports[`stem 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 12,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        12,
      ],
      "raw": "// asciimath",
      "type": "Comment",
      "value": "asciimath",
    },
    {
      "loc": {
        "end": {
          "column": 12,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 8,
        },
      },
      "range": [
        60,
        72,
      ],
      "raw": "// latexmath",
      "type": "Comment",
      "value": "latexmath",
    },
    {
      "loc": {
        "end": {
          "column": 13,
          "line": 15,
        },
        "start": {
          "column": 0,
          "line": 15,
        },
      },
      "range": [
        149,
        162,
      ],
      "raw": "// with title",
      "type": "Comment",
      "value": "with title",
    },
    {
      "loc": {
        "end": {
          "column": 9,
          "line": 23,
        },
        "start": {
          "column": 0,
          "line": 23,
        },
      },
      "range": [
        207,
        216,
      ],
      "raw": "// inline",
      "type": "Comment",
      "value": "inline",
    },
    {
      "loc": {
        "end": {
          "column": 19,
          "line": 26,
        },
        "start": {
          "column": 0,
          "line": 26,
        },
      },
      "range": [
        261,
        280,
      ],
      "raw": "// inline asciimath",
      "type": "Comment",
      "value": "inline asciimath",
    },
    {
      "loc": {
        "end": {
          "column": 19,
          "line": 29,
        },
        "start": {
          "column": 0,
          "line": 29,
        },
      },
      "range": [
        340,
        359,
      ],
      "raw": "// inline latexmath",
      "type": "Comment",
      "value": "inline latexmath",
    },
    {
      "loc": {
        "end": {
          "column": 11,
          "line": 5,
        },
        "start": {
          "column": 0,
          "line": 5,
        },
      },
      "range": [
        42,
        53,
      ],
      "raw": "sqrt(4) = 2",
      "type": "CodeBlock",
      "value": "sqrt(4) = 2",
    },
    {
      "loc": {
        "end": {
          "column": 40,
          "line": 12,
        },
        "start": {
          "column": 0,
          "line": 12,
        },
      },
      "range": [
        102,
        142,
      ],
      "raw": "C = \\alpha + \\beta Y^{\\gamma} + \\epsilon",
      "type": "CodeBlock",
      "value": "C = \\alpha + \\beta Y^{\\gamma} + \\epsilon",
    },
    {
      "loc": {
        "end": {
          "column": 11,
          "line": 20,
        },
        "start": {
          "column": 0,
          "line": 20,
        },
      },
      "range": [
        189,
        200,
      ],
      "raw": "sqrt(4) = 2",
      "title": "title",
      "type": "CodeBlock",
      "value": "sqrt(4) = 2",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 42,
              "line": 24,
            },
            "start": {
              "column": 0,
              "line": 24,
            },
          },
          "range": [
            217,
            259,
          ],
          "raw": "This is inline stem:[sqrt(4) = 2] example.",
          "type": "Str",
          "value": "This is inline \\$sqrt(4) = 2\\$ example.",
        },
      ],
      "loc": {
        "end": {
          "column": 42,
          "line": 24,
        },
        "start": {
          "column": 0,
          "line": 24,
        },
      },
      "range": [
        217,
        259,
      ],
      "raw": "This is inline stem:[sqrt(4) = 2] example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 57,
              "line": 27,
            },
            "start": {
              "column": 0,
              "line": 27,
            },
          },
          "range": [
            281,
            338,
          ],
          "raw": "This is inline asciimath asciimath:[sqrt(4) = 2] example.",
          "type": "Str",
          "value": "This is inline asciimath \\$sqrt(4) = 2\\$ example.",
        },
      ],
      "loc": {
        "end": {
          "column": 57,
          "line": 27,
        },
        "start": {
          "column": 0,
          "line": 27,
        },
      },
      "range": [
        281,
        338,
      ],
      "raw": "This is inline asciimath asciimath:[sqrt(4) = 2] example.",
      "type": "Paragraph",
    },
    {
      "children": [
        {
          "loc": {
            "end": {
              "column": 86,
              "line": 30,
            },
            "start": {
              "column": 0,
              "line": 30,
            },
          },
          "range": [
            360,
            446,
          ],
          "raw": "This is inline latexmath latexmath:[C = \\alpha + \\beta Y^{\\gamma} + \\epsilon] example.",
          "type": "Str",
          "value": "This is inline latexmath \\(C = \\alpha + \\beta Y^{\\gamma} + \\epsilon\\) example.",
        },
      ],
      "loc": {
        "end": {
          "column": 86,
          "line": 30,
        },
        "start": {
          "column": 0,
          "line": 30,
        },
      },
      "range": [
        360,
        446,
      ],
      "raw": "This is inline latexmath latexmath:[C = \\alpha + \\beta Y^{\\gamma} + \\epsilon] example.",
      "type": "Paragraph",
    },
  ],
  "loc": {
    "end": {
      "column": 86,
      "line": 30,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    446,
  ],
  "raw": "// asciimath
:stem: asciimath
[stem]
++++
sqrt(4) = 2
++++

// latexmath
:stem: latexmath
[stem]
++++
C = \\alpha + \\beta Y^{\\gamma} + \\epsilon
++++

// with title
:stem:
[stem]
.title
++++
sqrt(4) = 2
++++

// inline
This is inline stem:[sqrt(4) = 2] example.

// inline asciimath
This is inline asciimath asciimath:[sqrt(4) = 2] example.

// inline latexmath
This is inline latexmath latexmath:[C = \\alpha + \\beta Y^{\\gamma} + \\epsilon] example.",
  "type": "Document",
}
`;

exports[`table 1`] = `
{
  "children": [
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        8,
      ],
      "raw": "// basic",
      "type": "Comment",
      "value": "basic",
    },
    {
      "loc": {
        "end": {
          "column": 27,
          "line": 8,
        },
        "start": {
          "column": 0,
          "line": 8,
        },
      },
      "range": [
        37,
        64,
      ],
      "raw": "// with identical cell text",
      "type": "Comment",
      "value": "with identical cell text",
    },
    {
      "loc": {
        "end": {
          "column": 16,
          "line": 17,
        },
        "start": {
          "column": 0,
          "line": 17,
        },
      },
      "range": [
        157,
        173,
      ],
      "raw": "// complex table",
      "type": "Comment",
      "value": "complex table",
    },
    {
      "loc": {
        "end": {
          "column": 8,
          "line": 22,
        },
        "start": {
          "column": 0,
          "line": 22,
        },
      },
      "range": [
        194,
        202,
      ],
      "raw": "// empty",
      "type": "Comment",
      "value": "empty",
    },
    {
      "loc": {
        "end": {
          "column": 25,
          "line": 26,
        },
        "start": {
          "column": 0,
          "line": 26,
        },
      },
      "range": [
        214,
        239,
      ],
      "raw": "// with header and footer",
      "type": "Comment",
      "value": "with header and footer",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 2,
                      "line": 4,
                    },
                    "start": {
                      "column": 1,
                      "line": 4,
                    },
                  },
                  "range": [
                    22,
                    23,
                  ],
                  "raw": "A",
                  "type": "Str",
                  "value": "A",
                },
              ],
              "loc": {
                "end": {
                  "column": 2,
                  "line": 4,
                },
                "start": {
                  "column": 1,
                  "line": 4,
                },
              },
              "range": [
                22,
                23,
              ],
              "raw": "A",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 4,
                      "line": 4,
                    },
                    "start": {
                      "column": 3,
                      "line": 4,
                    },
                  },
                  "range": [
                    24,
                    25,
                  ],
                  "raw": "B",
                  "type": "Str",
                  "value": "B",
                },
              ],
              "loc": {
                "end": {
                  "column": 4,
                  "line": 4,
                },
                "start": {
                  "column": 3,
                  "line": 4,
                },
              },
              "range": [
                24,
                25,
              ],
              "raw": "B",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 4,
              "line": 4,
            },
            "start": {
              "column": 1,
              "line": 4,
            },
          },
          "range": [
            22,
            25,
          ],
          "raw": "",
          "type": "TableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 2,
                      "line": 5,
                    },
                    "start": {
                      "column": 1,
                      "line": 5,
                    },
                  },
                  "range": [
                    27,
                    28,
                  ],
                  "raw": "C",
                  "type": "Str",
                  "value": "C",
                },
              ],
              "loc": {
                "end": {
                  "column": 2,
                  "line": 5,
                },
                "start": {
                  "column": 1,
                  "line": 5,
                },
              },
              "range": [
                27,
                28,
              ],
              "raw": "C",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 4,
                      "line": 5,
                    },
                    "start": {
                      "column": 3,
                      "line": 5,
                    },
                  },
                  "range": [
                    29,
                    30,
                  ],
                  "raw": "D",
                  "type": "Str",
                  "value": "D",
                },
              ],
              "loc": {
                "end": {
                  "column": 4,
                  "line": 5,
                },
                "start": {
                  "column": 3,
                  "line": 5,
                },
              },
              "range": [
                29,
                30,
              ],
              "raw": "D",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 4,
              "line": 5,
            },
            "start": {
              "column": 1,
              "line": 5,
            },
          },
          "range": [
            27,
            30,
          ],
          "raw": "",
          "type": "TableRow",
        },
      ],
      "loc": {
        "end": {
          "column": 4,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "range": [
        22,
        30,
      ],
      "raw": "",
      "type": "Table",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 23,
                      "line": 11,
                    },
                    "start": {
                      "column": 1,
                      "line": 11,
                    },
                  },
                  "range": [
                    72,
                    94,
                  ],
                  "raw": "Haystack with needles.",
                  "type": "Str",
                  "value": "Haystack with needles.",
                },
              ],
              "loc": {
                "end": {
                  "column": 23,
                  "line": 11,
                },
                "start": {
                  "column": 1,
                  "line": 11,
                },
              },
              "range": [
                72,
                94,
              ],
              "raw": "Haystack with needles.",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 21,
                      "line": 11,
                    },
                    "start": {
                      "column": 15,
                      "line": 11,
                    },
                  },
                  "range": [
                    86,
                    92,
                  ],
                  "raw": "needle",
                  "type": "Str",
                  "value": "needle",
                },
              ],
              "loc": {
                "end": {
                  "column": 21,
                  "line": 11,
                },
                "start": {
                  "column": 15,
                  "line": 11,
                },
              },
              "range": [
                86,
                92,
              ],
              "raw": "needle",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 21,
              "line": 11,
            },
            "start": {
              "column": 1,
              "line": 11,
            },
          },
          "range": [
            72,
            92,
          ],
          "raw": "",
          "type": "TableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 38,
                      "line": 13,
                    },
                    "start": {
                      "column": 1,
                      "line": 13,
                    },
                  },
                  "range": [
                    105,
                    142,
                  ],
                  "raw": "Chocolate in someone's peanut butter.",
                  "type": "Str",
                  "value": "Chocolate in someone’s peanut butter.",
                },
              ],
              "loc": {
                "end": {
                  "column": 38,
                  "line": 13,
                },
                "start": {
                  "column": 1,
                  "line": 13,
                },
              },
              "range": [
                105,
                142,
              ],
              "raw": "Chocolate in someone's peanut butter.",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 7,
                      "line": 14,
                    },
                    "start": {
                      "column": 1,
                      "line": 14,
                    },
                  },
                  "range": [
                    144,
                    150,
                  ],
                  "raw": "peanut",
                  "type": "Str",
                  "value": "peanut",
                },
              ],
              "loc": {
                "end": {
                  "column": 7,
                  "line": 14,
                },
                "start": {
                  "column": 1,
                  "line": 14,
                },
              },
              "range": [
                144,
                150,
              ],
              "raw": "peanut",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 7,
              "line": 14,
            },
            "start": {
              "column": 1,
              "line": 13,
            },
          },
          "range": [
            105,
            150,
          ],
          "raw": "",
          "type": "TableRow",
        },
      ],
      "loc": {
        "end": {
          "column": 7,
          "line": 14,
        },
        "start": {
          "column": 1,
          "line": 11,
        },
      },
      "range": [
        72,
        150,
      ],
      "raw": "",
      "type": "Table",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 8,
                      "line": 22,
                    },
                    "start": {
                      "column": 0,
                      "line": 22,
                    },
                  },
                  "range": [
                    194,
                    202,
                  ],
                  "raw": "// empty",
                  "type": "Comment",
                  "value": "empty",
                },
                {
                  "children": [
                    {
                      "loc": {
                        "end": {
                          "column": 8,
                          "line": 22,
                        },
                        "start": {
                          "column": 0,
                          "line": 22,
                        },
                      },
                      "range": [
                        194,
                        202,
                      ],
                      "raw": "// empty",
                      "type": "Comment",
                      "value": "empty",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "loc": {
                                "end": {
                                  "column": 8,
                                  "line": 19,
                                },
                                "start": {
                                  "column": 4,
                                  "line": 19,
                                },
                              },
                              "range": [
                                183,
                                187,
                              ],
                              "raw": "text",
                              "type": "Str",
                              "value": "text",
                            },
                          ],
                          "loc": {
                            "end": {
                              "column": 8,
                              "line": 19,
                            },
                            "start": {
                              "column": 4,
                              "line": 19,
                            },
                          },
                          "range": [
                            183,
                            187,
                          ],
                          "raw": "text",
                          "type": "Paragraph",
                        },
                        {
                          "loc": {
                            "end": {
                              "column": 8,
                              "line": 22,
                            },
                            "start": {
                              "column": 0,
                              "line": 22,
                            },
                          },
                          "range": [
                            194,
                            202,
                          ],
                          "raw": "// empty",
                          "type": "Comment",
                          "value": "empty",
                        },
                      ],
                      "loc": {
                        "end": {
                          "column": 8,
                          "line": 22,
                        },
                        "start": {
                          "column": 4,
                          "line": 19,
                        },
                      },
                      "range": [
                        183,
                        202,
                      ],
                      "raw": "",
                      "type": "ListItem",
                    },
                  ],
                  "loc": {
                    "end": {
                      "column": 8,
                      "line": 22,
                    },
                    "start": {
                      "column": 0,
                      "line": 22,
                    },
                  },
                  "range": [
                    194,
                    202,
                  ],
                  "raw": "",
                  "type": "List",
                },
              ],
              "loc": {
                "end": {
                  "column": 8,
                  "line": 19,
                },
                "start": {
                  "column": 2,
                  "line": 19,
                },
              },
              "range": [
                181,
                187,
              ],
              "raw": "* text",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 8,
              "line": 19,
            },
            "start": {
              "column": 2,
              "line": 19,
            },
          },
          "range": [
            181,
            187,
          ],
          "raw": "",
          "type": "TableRow",
        },
      ],
      "loc": {
        "end": {
          "column": 8,
          "line": 19,
        },
        "start": {
          "column": 2,
          "line": 19,
        },
      },
      "range": [
        181,
        187,
      ],
      "raw": "",
      "type": "Table",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 8,
                      "line": 29,
                    },
                    "start": {
                      "column": 1,
                      "line": 29,
                    },
                  },
                  "range": [
                    263,
                    270,
                  ],
                  "raw": "HeaderA",
                  "type": "Str",
                  "value": "HeaderA",
                },
              ],
              "loc": {
                "end": {
                  "column": 8,
                  "line": 29,
                },
                "start": {
                  "column": 1,
                  "line": 29,
                },
              },
              "range": [
                263,
                270,
              ],
              "raw": "HeaderA",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 16,
                      "line": 29,
                    },
                    "start": {
                      "column": 9,
                      "line": 29,
                    },
                  },
                  "range": [
                    271,
                    278,
                  ],
                  "raw": "HeaderB",
                  "type": "Str",
                  "value": "HeaderB",
                },
              ],
              "loc": {
                "end": {
                  "column": 16,
                  "line": 29,
                },
                "start": {
                  "column": 9,
                  "line": 29,
                },
              },
              "range": [
                271,
                278,
              ],
              "raw": "HeaderB",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 16,
              "line": 29,
            },
            "start": {
              "column": 1,
              "line": 29,
            },
          },
          "range": [
            263,
            278,
          ],
          "raw": "",
          "type": "TableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 3,
                      "line": 31,
                    },
                    "start": {
                      "column": 1,
                      "line": 31,
                    },
                  },
                  "range": [
                    281,
                    283,
                  ],
                  "raw": "A1",
                  "type": "Str",
                  "value": "A1",
                },
              ],
              "loc": {
                "end": {
                  "column": 3,
                  "line": 31,
                },
                "start": {
                  "column": 1,
                  "line": 31,
                },
              },
              "range": [
                281,
                283,
              ],
              "raw": "A1",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 3,
                      "line": 32,
                    },
                    "start": {
                      "column": 1,
                      "line": 32,
                    },
                  },
                  "range": [
                    285,
                    287,
                  ],
                  "raw": "B1",
                  "type": "Str",
                  "value": "B1",
                },
              ],
              "loc": {
                "end": {
                  "column": 3,
                  "line": 32,
                },
                "start": {
                  "column": 1,
                  "line": 32,
                },
              },
              "range": [
                285,
                287,
              ],
              "raw": "B1",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 3,
              "line": 32,
            },
            "start": {
              "column": 1,
              "line": 31,
            },
          },
          "range": [
            281,
            287,
          ],
          "raw": "",
          "type": "TableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 3,
                      "line": 34,
                    },
                    "start": {
                      "column": 1,
                      "line": 34,
                    },
                  },
                  "range": [
                    290,
                    292,
                  ],
                  "raw": "A2",
                  "type": "Str",
                  "value": "A2",
                },
              ],
              "loc": {
                "end": {
                  "column": 3,
                  "line": 34,
                },
                "start": {
                  "column": 1,
                  "line": 34,
                },
              },
              "range": [
                290,
                292,
              ],
              "raw": "A2",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 3,
                      "line": 35,
                    },
                    "start": {
                      "column": 1,
                      "line": 35,
                    },
                  },
                  "range": [
                    294,
                    296,
                  ],
                  "raw": "B2",
                  "type": "Str",
                  "value": "B2",
                },
              ],
              "loc": {
                "end": {
                  "column": 3,
                  "line": 35,
                },
                "start": {
                  "column": 1,
                  "line": 35,
                },
              },
              "range": [
                294,
                296,
              ],
              "raw": "B2",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 3,
              "line": 35,
            },
            "start": {
              "column": 1,
              "line": 34,
            },
          },
          "range": [
            290,
            296,
          ],
          "raw": "",
          "type": "TableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 8,
                      "line": 38,
                    },
                    "start": {
                      "column": 1,
                      "line": 38,
                    },
                  },
                  "range": [
                    302,
                    309,
                  ],
                  "raw": "FooterA",
                  "type": "Str",
                  "value": "FooterA",
                },
              ],
              "loc": {
                "end": {
                  "column": 8,
                  "line": 38,
                },
                "start": {
                  "column": 1,
                  "line": 38,
                },
              },
              "range": [
                302,
                309,
              ],
              "raw": "FooterA",
              "type": "TableCell",
            },
            {
              "children": [
                {
                  "loc": {
                    "end": {
                      "column": 16,
                      "line": 38,
                    },
                    "start": {
                      "column": 9,
                      "line": 38,
                    },
                  },
                  "range": [
                    310,
                    317,
                  ],
                  "raw": "FooterB",
                  "type": "Str",
                  "value": "FooterB",
                },
              ],
              "loc": {
                "end": {
                  "column": 16,
                  "line": 38,
                },
                "start": {
                  "column": 9,
                  "line": 38,
                },
              },
              "range": [
                310,
                317,
              ],
              "raw": "FooterB",
              "type": "TableCell",
            },
          ],
          "loc": {
            "end": {
              "column": 16,
              "line": 38,
            },
            "start": {
              "column": 1,
              "line": 38,
            },
          },
          "range": [
            302,
            317,
          ],
          "raw": "",
          "type": "TableRow",
        },
      ],
      "loc": {
        "end": {
          "column": 16,
          "line": 38,
        },
        "start": {
          "column": 1,
          "line": 29,
        },
      },
      "range": [
        263,
        317,
      ],
      "raw": "",
      "type": "Table",
    },
  ],
  "loc": {
    "end": {
      "column": 16,
      "line": 38,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    322,
  ],
  "raw": "// basic
.title
|===
|A|B
|C|D
|===

// with identical cell text
|===

|Haystack with needles. |needle

|Chocolate in someone's peanut butter.
|peanut
|===

// complex table
|===
a|* text
|===

// empty
|===
|===

// with header and footer
[%header%footer]
|===
|HeaderA|HeaderB

|A1
|B1

|A2
|B2
||

|FooterA|FooterB
|===",
  "type": "Document",
}
`;
